# cspd-dd

./: .gitignore  PAPER_BRIEF.md  README.md  classes.json  environment.yml  gen_dd_coding_instruction_spec.md  plan.md  pyproject.toml  tmp_stage2_smoke_fake_flux.py  tmp_stage2_smoke_fake_pixart.py
configs/stage1/: archetype_taxonomy_manual.json  class_to_archetype_imagenet1k_auto.json  class_to_archetype_imagenet1k_manual.json
configs/stage2/: sample_prompts_imagenette.txt
data/: samples.jsonl
docs/: stage1_attribute_normalization_plan.md
docs/stage_summaries/: README.md
scripts/: README.md
scripts/data/: analyze_attribute_values.py  convert_class_py_to_json.py  generate_archetype_taxonomy_candidate_vlm.py  generate_class_to_archetype_map.py  generate_class_to_archetype_map_vlm.py  make_imagefolder_subset.py  normalize_stage1_attributes.py  review_normalization_with_vlm.py
scripts/eval/: run_eval_pipeline.sh
scripts/inference/: sample_sdxl_lora.py
scripts/pipelines/: run_baseline_3x3.sh  run_candidate_sweep.sh  run_full_pipeline.sh  run_ipc_sweep.sh  run_setlevel_phase3.sh
scripts/prep/: convert_class_py_to_json.py  generate_class_to_archetype_vlm.sh  prepare_stage1_metadata.sh
scripts/server/: README.md  check_stage1_env.sh  check_stage2_sdxl_env.sh  dump_stage2_backbone_modules.sh  generate_class_to_archetype_vlm.sh  prepare_stage1_metadata.sh  run_baseline_3x3.sh  run_candidate_sweep.sh  run_full_pipeline.sh  run_ipc_sweep.sh  run_setlevel_phase3.sh  run_stage1_full_workflow.sh  run_stage1_mock.sh  run_stage1_normalization.sh  run_stage1_normalization_review_vlm.sh  run_stage1_qwen_local.sh  run_stage1_render.sh  run_stage2_render.sh  run_stage2_train.sh  setup_cspd_stage1.sh
scripts/stage1/: check_stage1_env.sh  normalize_stage1_attributes.py  run_stage1_mock.sh  run_stage1_normalization.sh  run_stage1_pipeline.sh  run_stage1_qwen_local.sh  run_stage1_render.sh  setup_cspd_stage1.sh
scripts/stage2/: check_stage2_sdxl_env.sh  dump_stage2_backbone_modules.sh  run_pixart_stage2_baseline_sampling.sh  run_pixart_stage2_wandb.sh  run_sd15_stage2_official.sh  run_sdxl_stage2_official.sh  run_stage2_pipeline.sh  run_stage2_train.sh  sample_sdxl_lora.py
scripts/stage3/: run_stage3_pipeline.sh
scripts/stage4/: run_stage4_pipeline.sh
scripts/vlm/: test_qwen_vl_load.py  test_single_image_infer.py
tests/: test_stage2_pixart_dtype.py  test_stage2_sampling_defaults.py  test_stage2_sdxl_materialization.py  test_stage2_sdxl_official_preflight.py
(+64 files in other folders)
