[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cspd-stage1"
version = "0.1.0"
description = "Prep + Stage 1 + Stage 2 scaffold for CSPD (metadata prep, Stage 1 canonicalization/render, Stage 2 adaptation scaffold)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tqdm>=4.66",
  "pillow",
  "diffusers>=0.37.1",
  "transformers",
  "accelerate",
  "sentencepiece",
  "safetensors",
]

[project.scripts]
cspd-stage1 = "cspd_stage1.cli:main"
cspd-stage2 = "cspd_stage2.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
