[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cspd-stage1"
version = "0.1.0"
description = "CSPD pipeline: Stage 1 canonicalization, Stage 2 SDXL LoRA adaptation, Stage 3 mode discovery, Stage 4 distilled generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "torchvision",
  "numpy",
  "tqdm>=4.66",
  "pillow",
  "diffusers>=0.37.1",
  "transformers",
  "accelerate",
  "peft",
  "sentencepiece",
  "protobuf",
  "tiktoken",
  "safetensors",
  "scikit-learn",
]

[project.optional-dependencies]
wandb = ["wandb"]
xformers = ["xformers"]
8bit = ["bitsandbytes"]

[project.scripts]
cspd-stage1 = "cspd_stage1.cli:main"
cspd-stage2 = "cspd_stage2.cli:main"
cspd-stage3 = "cspd_stage3.cli:main"
cspd-stage4 = "cspd_stage4.cli:main"
cspd-eval = "cspd_eval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
